--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="info">
           <h1>すごい</h1>
-          <P>とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。</P>
+          <P>ドットインストールで勉強中です！とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。とにかくすごい。</P>
         </div>
       </section>
 
